--- a/Week 17/vue-demo/package.json
+++ b/Week 17/vue-demo/package.json
@@ -2,7 +2,7 @@
   "name": "vue demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "8.1.1",
+    "css-loader": "5.2.4",
     "vue-loader": "15.9.6",
-    "webpack": "5.35.1"
+    "vue-style-loader": "4.1.3",
+    "vue-template-compiler": "2.6.12",
+    "webpack": "5.35.1",
+    "webpack-cli": "4.6.0"
   },
   "dependencies": {
     "vue": "2.6.12"
